# pydantic-function-models

./: .aiignore  .pre-commit-config.yaml  Justfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
src/pydantic_function_models/: __init__.py  parameters.py  validated_function.py
tests/: function_test.py
tests/helpers/: data.py
