[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pdbpp>=0.10.3",
  "pdm>=2.23"
]
test = ["pytest>=7.4"]

[project]
name = "pydantic-function-models"
dynamic = ["version"]
description = "Migrating v1 Pydantic ValidatedFunction to v2."
authors = [
  {name = "Louis Maddox", email = "louismmx@gmail.com"}
]
keywords = [
  'pydantic',
  'serialization',
  'deserialization',
  'parsing'
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries",
  'Framework :: Pydantic',
  'Framework :: Pydantic :: 2',
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = [
  "pydantic>=2.1"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/lmmx/pydantic-function-models"
Repository = "https://github.com/lmmx/pydantic-function-models"
Issues = "https://github.com/lmmx/pydantic-function-models/issues"

[tool.isort]
known_first_party = ["pydantic_function_models"]

[tool.pdm]
version = {source = "file", path = "src/pydantic_function_models/__init__.py"}

[tool.uv]
default-groups = ["dev", "test"]
